<?xml version="1.0"?>
<package format="2">
  <name>geometry_mapper</name>
  <version>0.0.0</version>
  <description>The geometry_mapper package</description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    ISAAC Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    ISAAC Flight Software
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>ff_util</build_depend>
  <build_depend>isaac_hw_msgs</build_depend>
  <build_depend>camera</build_depend>
  <build_depend>interest_point</build_depend>
  <build_depend>sparse_mapping</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>msg_conversions</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>config_reader</build_depend>
  <build_depend>localization_common</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>ff_util</build_export_depend>
  <build_export_depend>isaac_hw_msgs</build_export_depend>
  <build_export_depend>camera</build_export_depend>
  <build_export_depend>interest_point</build_export_depend>
  <build_export_depend>sparse_mapping</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>msg_conversions</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>localization_common</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>ff_util</exec_depend>
  <exec_depend>isaac_hw_msgs</exec_depend>
  <exec_depend>camera</exec_depend>
  <exec_depend>interest_point</exec_depend>
  <exec_depend>sparse_mapping</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>msg_conversions</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>config_reader</exec_depend>
  <exec_depend>localization_common</exec_depend>

  <export>
<!--
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
-->
  </export>
</package>
